--- a/msconta/src/main/resources/application.properties
+++ b/msconta/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+#================================ BANCO DE DADOS ========================================
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+#================================ MENSAGERIA ========================================
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+mq.queues.emissao-cartoes=emissao-cartoes
